[project]
name = "arc-research"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.136.0",
    "jieba>=0.42.1",
    "openai>=2.32.0",
    "pymilvus>=2.6.12",
    "python-multipart>=0.0.26",
    "uvicorn>=0.44.0",
]
